--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h2>Please fill in the form below:</h2>
-  <form action="https://fonts.vercel.app/formHandler.js" method="POST">
+  <form action="https://fonts-virid.vercel.app/formHandler.js" method="POST">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name"><br><br>
 
