--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Form Submission</title>
-</head>
-<body>
-  <h2>Please fill in the form below:</h2>
-  <form action="https://fonts-virid.vercel.app/formHandler.js" method="POST">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name"><br><br>
-
-    <label for="country">Country:</label>
-    <input type="text" id="country" name="country"><br><br>
-
-    <input type="submit" value="Submit">
-  </form>
-</body>
-</html>
+<form action="https://script.google.com/macros/s/AKfycbyitQKuLP2gT4wgv2jxshlHoKRpSxLfeIfhQhPWDqDbtSsN2feHAuS07kl3b0xvqJ4/exec" method="post">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name"><br><br>
+  <label for="country">Country:</label>
+  <input type="text" id="country" name="country"><br><br>
+  <input type="submit" value="Submit">
+</form>
