--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<iframe id="hiddenIframe" style="display: none;"></iframe>
 <form action="https://script.google.com/macros/s/AKfycbxT4sgld1CPW_0uAvK67XhIykh96yfdDBc85WqK6tV1n8k0hGn3f3n2IKiPymFiEF6A7g/exec" method="post">
   <label for="name">Name:</label>
   <input type="text" id="name" name="name"><br><br>
