--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<iframe id="hiddenIframe" style="display: none;"></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+    <iframe id="hiddenIframe" style="display: none;"></iframe>
 <form action="https://script.google.com/macros/s/AKfycbxT4sgld1CPW_0uAvK67XhIykh96yfdDBc85WqK6tV1n8k0hGn3f3n2IKiPymFiEF6A7g/exec" method="post" target="hiddenIframe">
   <label for="name">Name:</label>
   <input type="text" id="name" name="name"><br><br>
@@ -6,3 +11,5 @@
   <input type="text" id="country" name="country"><br><br>
   <input type="submit" value="Submit">
 </form>
+</body>
+</html>
