--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
 </head>
 <body>
-    <iframe id="hiddenIframe" style="display: none;"></iframe>
-<form action="https://script.google.com/macros/s/AKfycbxT4sgld1CPW_0uAvK67XhIykh96yfdDBc85WqK6tV1n8k0hGn3f3n2IKiPymFiEF6A7g/exec" method="post" target="hiddenIframe">
-  <label for="name">Name:</label>
+<form id="myForm" action="/script.google.com/macros/s/AKfycbxT4sgld1CPW_0uAvK67XhIykh96yfdDBc85WqK6tV1n8k0hGn3f3n2IKiPymFiEF6A7g/exec" method="post">
+    <label for="name">Name:</label>
   <input type="text" id="name" name="name"><br><br>
   <label for="country">Country:</label>
   <input type="text" id="country" name="country"><br><br>
   <input type="submit" value="Submit">
 </form>
+    <script>
+  const form = document.getElementById('myForm');
+  form.addEventListener('submit', function(event) {
+    event.preventDefault();   
+ // Prevent default form submission
+    google.script.run.withSuccessHandler(function() {
+      // Optional: Display a success message to the user (not required)
+      console.log('Form submitted successfully!');
+    }).doPost(); // Call doPost function
+  });
+</script>
 </body>
 </html>
