--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
-<form id="myForm" action="/script.google.com/macros/s/AKfycbxT4sgld1CPW_0uAvK67XhIykh96yfdDBc85WqK6tV1n8k0hGn3f3n2IKiPymFiEF6A7g/exec" method="post">
-    <label for="name">Name:</label>
+<form id="myForm" action="https://script.google.com/macros/s/AKfycbzjdrU7DauZHfvdT5a1QKGf3tPT3QuSO8_JTk25R8iR8k9T-_o4dAzEHZYIOmjeRGQKDQ/exec" method="post">
+  <label for="name">Name:</label>
   <input type="text" id="name" name="name"><br><br>
   <label for="country">Country:</label>
   <input type="text" id="country" name="country"><br><br>
   <input type="submit" value="Submit">
 </form>
-    <script>
+
+<script>
   const form = document.getElementById('myForm');
-  form.addEventListener('submit', function(event) {
-    event.preventDefault();   
- // Prevent default form submission
-    google.script.run.withSuccessHandler(function() {
-      // Optional: Display a success message to the user (not required)
-      console.log('Form submitted successfully!');
-    }).doPost(); // Call doPost function
+  form.addEventListener('submit', (event) => {
+    event.preventDefault(); // Prevent default form submission
+    // Form submission is handled by the Google Apps Script
   });
 </script>
-</body>
-</html>
