--- a/index.html
+++ b/index.html
@@ -5,4 +5,26 @@
   <input type="text" id="country" name="country"><br><br>
   <input type="submit" value="Submit">
 </form>
+<script>
+  const form = document.getElementById('myForm');
+  form.addEventListener('submit', (event)   
+ => {
+    // Don't prevent default form submission
+
+    // Send form data using Fetch API (optional for feedback)
+    fetch(event.target.action, {
+      method: 'POST',
+      body: new FormData(event.target) // Get form data
+    })
+    .then(response => response.text())
+    .then(data => {
+      console.log(data); // Log the response from the script (optional)
+      // You can display a success message here (optional)
+    })
+    .catch(error => {
+      console.error('Error:', error);
+      // Handle errors (optional)
+    });
+  });
+</script>
 
