--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
 </form>
 <script>
   const form = document.getElementById('myForm');
-  form.addEventListener('submit', (event)   
- => {
-    // Don't prevent default form submission
+  form.addEventListener('submit', (event) => {
+    event.preventDefault(); // Prevent   
+ default form submission
 
-    // Send form data using Fetch API (optional for feedback)
-    fetch(event.target.action, {
+    const name = document.getElementById('name').value;   
+
+    const country = document.getElementById('country').value;
+
+    fetch(form.action, {
       method: 'POST',
-      body: new FormData(event.target) // Get form data
+      body: JSON.stringify({ name, country })
     })
-    .then(response => response.text())
-    .then(data => {
-      console.log(data); // Log the response from the script (optional)
-      // You can display a success message here (optional)
+    .then(response => {
+      // Handle success (optional)
+      console.log('Form submitted successfully');
+      // You can display a success message or redirect to another page here
     })
     .catch(error => {
-      console.error('Error:', error);
       // Handle errors (optional)
+      console.error('Error:', error);
+      // Display an error message to the user
     });
   });
 </script>
-
