--- a/index.html
+++ b/index.html
@@ -11,23 +11,36 @@
     event.preventDefault(); // Prevent   
  default form submission
 
-    const name = document.getElementById('name').value;   
-
-    const country = document.getElementById('country').value;
+    const formData = new FormData(event);   
+ // Get form data
+    const formDataObj = {};
+    formData.forEach((value, key) => {
+      formDataObj[key] = value;
+    });
 
     fetch(form.action, {
       method: 'POST',
-      body: JSON.stringify({ name, country })
+      body: JSON.stringify(formDataObj)
     })
     .then(response => {
-      // Handle success (optional)
-      console.log('Form submitted successfully');
-      // You can display a success message or redirect to another page here
+      if (!response.ok) {
+        throw new Error('Network response was not ok');
+      }
+  
+
+    })
+    .then(data => {
+      console.log('Form submitted successfully:', data);
+      // Display a success message to the user
+      alert('Form submitted successfully!');
+      // You can also clear the form fields or redirect to another page here
     })
     .catch(error => {
-      // Handle errors (optional)
       console.error('Error:', error);
       // Display an error message to the user
+      alert('Error submitting form. Please try again.');
     });
   });
 </script>
+
+    
