--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <input type="text" id="name" name="name"><br><br>
   <label for="country">Country:</label>
   <input type="text" id="country" name="country"><br><br>
-  <input type="submit" value="Submit">
+  <a href="index.html"><input type="submit" value="Submit"><a/>
 </form>
 <script>
   const form = document.getElementById('myForm');
