--- a/index.html
+++ b/index.html
@@ -5,42 +5,38 @@
   <input type="text" id="country" name="country"><br><br>
   <a href="index.html"><input type="submit" value="Submit"><a/>
 </form>
-<script>
+    <script>
   const form = document.getElementById('myForm');
   form.addEventListener('submit', (event) => {
     event.preventDefault(); // Prevent   
  default form submission
 
-    const formData = new FormData(event);   
- // Get form data
-    const formDataObj = {};
-    formData.forEach((value, key) => {
-      formDataObj[key] = value;
-    });
+    const name = document.getElementById('name').value;   
+
+    const country = document.getElementById('country').value;
 
     fetch(form.action, {
       method: 'POST',
-      body: JSON.stringify(formDataObj)
+      body: JSON.stringify({ name, country })
     })
     .then(response => {
       if (!response.ok) {
         throw new Error('Network response was not ok');
       }
-  
-
+      return response.text();
     })
     .then(data => {
       console.log('Form submitted successfully:', data);
-      // Display a success message to the user
       alert('Form submitted successfully!');
-      // You can also clear the form fields or redirect to another page here
+
+      // Clear form fields
+      document.getElementById('name').value = '';
+      document.getElementById('country').value = '';
     })
     .catch(error => {
       console.error('Error:', error);
-      // Display an error message to the user
       alert('Error submitting form. Please try again.');
     });
   });
 </script>
-
-    
+  
