--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script>
   const form = document.getElementById('myForm');
   form.addEventListener('submit', (event) => {
-    event.preventDefault(); // Prevent   
- default form submission
+    event.preventDefault(); // Prevent  default form submission
 
     const name = document.getElementById('name').value;   
 
