--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ fetch(form.action, {
       if (!response.ok) {
         throw new Error('Network response was not ok');
       }
-       return HtmlService.createHtmlOutputFromFile('index');
+       return HtmlService.createHtmlOutputFromFile('index.html');
     })
     .then(data => {
       console.log('Form submitted successfully:', data);
